[package]
name = "validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow =  "1.0"
config = "0.13.0"
lazy_static = "1.4"
eyre = "0.6.5"
serde = "1.0.152"
serde_json = "1.0.91"
wasmtime = "10.0.1"
wasmtime-wasi = "10.0.1"
wasi-common = "10.0.1"
sha2 = "0.10.6"
bs58 = "0.4.0"

types = { path = "../types" }
ipfsdag = { path = "../ipfsdag" }